# pyinsyde

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DATA.md  PORTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  codex-release.yml  codex-review.yml  codex-triage.yml  publish.yml
Paper/: README.md
examples/: run_insyde.py
pyinsyde/: __init__.py  model.py  prices.py  variables.py
pyinsyde/data/: unit_prices.txt
r_reference/: exposure_variables.R  hazard_variables.R  insyde_function.R  run_insyde_example.R
tests/: test_model.py
