[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyinsyde"
version = "0.1.0"
description = "A faithful, dependency-light Python port of the INSYDE synthetic flood depth-damage model (Dottori et al. 2016)."
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "pengkodammaya" }]
keywords = ["flood", "damage", "INSYDE", "depth-damage", "risk", "natural-hazards"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/pengkodammaya/pyinsyde"
Repository = "https://github.com/pengkodammaya/pyinsyde"

[tool.hatch.build.targets.wheel]
packages = ["pyinsyde"]

[tool.hatch.build.targets.sdist]
include = [
    "/pyinsyde",
    "/tests",
    "/examples",
    "/r_reference",
    "/PORTING.md",
    "/DATA.md",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
files = ["pyinsyde"]
# numpy ships stubs; scipy's are partial — don't fail on third-party stub gaps.
ignore_missing_imports = true
